# LumiXAI

./: .env.local.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  main.py  mkdocs.yml  pyproject.toml
backend/docs/: index.md
backend/docs/api/: abstract.md  attributors.md  db.md  main.md  schema.md  utils.md  wrappers.md
backend/notebooks/: 01_test_wrapper.ipynb  02_test_captum.ipynb  case_study_1.ipynb  case_study_2.ipynb  case_study_bold_generation.ipynb  case_study_diffusion_style.ipynb  case_study_toxicity_classification.ipynb  client.py  demo_batch.ipynb
backend/notebooks/deprecated/: 02_test_captum.ipynb
backend/src/: abstract.py  db.py  schema.py
backend/src/attributors/: captum_deeplift.py  captum_grad.py  captum_gradcam.py  captum_gradientshap.py  captum_inputxgrad.py  captum_lime.py  captum_occlusion.py  captum_saliency.py  captum_smoothgrad.py  daam.py
backend/src/utils/: daam_custom.py  hf_auth.py  hf_hub.py  image_attribution.py
backend/src/wrappers/: hf_image.py  hf_image_classification.py  hf_text.py  hf_text_classification.py  hf_text_generation.py
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ConfigurationPanel.tsx  Header.tsx  ImageGenView.tsx  InferencePanel.tsx  InputPanel.tsx  MainApp.tsx  ModelSelector.tsx  Navbar.tsx  OutputPanel.tsx  TextGenView.tsx  TokenExplained.tsx  Tooltip.tsx  VisualizationResult.tsx  WelcomeScreen.tsx
frontend/app/components/layout/: Header.tsx  ImageClassificationView.tsx  ImageGenView.tsx  ModelSelector.tsx  Navbar.tsx  TextGenView.tsx  ThemeToggle.tsx  TokenExplained.tsx  Tooltip.tsx
frontend/app/components/panels/: ConfigurationPanel.tsx  InputPanel.tsx  OutputPanel.tsx
frontend/app/components/tutorial/: TutorialOverlay.tsx
frontend/app/hooks/: useBackendStatus.ts  useInference.ts  useJobsHistory.ts  useModelManager.ts  useSystemBoot.ts
frontend/app/lib/: api.ts  session.ts  taskToWrapper.ts  tutorialExamples.ts  tutorialGuide.ts
frontend/app/types/: index.ts
frontend/public/tutorial-examples/: image-classification.json  text-classification.json  text-generation.json
install/: install_for_macos.py
readme_files/: diagram.md
src/attributors/: captum_grad.py
