[project]
name = "xai-project"
version = "0.1.0"
description = "XAI Framework Environment"
authors = [
    {name = "Lorenzo Gatta",email = "lorenzo.gatta@studenti.unimi.it"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Core Data Science (Safe Stack) ---
numpy = "<2.0.0"
pandas = "^2.2"
scipy = "^1.10"
matplotlib = "^3.8"
tqdm = "*"

# --- Development Tools ---
ipykernel = "*"
jupyter = "*"

# --- GUI ---
streamlit = "^1.30"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

# --- AI & HuggingFace ---
torch = "2.2.2" # For macos x86_64

## Error 'cached_download', fixed with:
transformers = "^4.38.0"
diffusers = "^0.27.0"
accelerate = "^0.28.0"
huggingface-hub = "^0.22.0"

# --- XAI ---
captum = "*"
# IGNORE DAAM ----> CUSTOM IMPLEMENTATION because of:
## from diffusers.models.attention import CrossAttention
## ImportError: cannot import name 'CrossAttention' from 'diffusers.models.attention'
daam = "*" 

# --- For llvmlite
numba = "0.59.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"