[project]
name = "xai-project"
version = "0.1.0"
description = "XAI Framework Environment"
authors = [
    {name = "Lorenzo Gatta",email = "lorenzo.gatta@studenti.unimi.it"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Core Data Science ---
numpy = "<2.0.0"
pandas = "^2.2"
scipy = "^1.10"
matplotlib = "^3.8"
tqdm = "*"

# --- Development Tools ---
ipykernel = "*"
jupyter = "*"

# --- GUI & API ---
streamlit = "^1.30"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
requests = "*"

# --- AI & HuggingFace ---
torch = "2.2.2"
transformers = ">=4.56.1,<5.0.0"
diffusers = ">=0.33.0,<0.34.0"
accelerate = "^0.28.0"
huggingface-hub = ">=0.34.0,<1.0.0"

# --- XAI ---
captum = "*"
daam = "*" 

# --- Optimizations ---
numba = "0.59.0"

# --- Storage ---
sqlalchemy = "^2.0.48"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.7.3,<10.0.0"
mkdocstrings = {extras = ["python"], version = ">=1.0.3,<2.0.0"}
